Update 2nd review code.ipynb

--- a/2nd review code.ipynb
+++ b/2nd review code.ipynb
@@ -49,9 +49,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#-----------------------------------\n",
-    "# GLOBAL FEATURE EXTRACTION\n",
-    "#-----------------------------------\n",
+    
+    "# GLOBAL FEATURE EXTRACTION\n"
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "import numpy as np\n",
@@ -59,10 +58,6 @@
     "import cv2\n",
     "import os\n",
     "import h5py\n",
-    "\n",
-    "#--------------------\n",
-    "# tunable-parameters\n",
-    "#--------------------\n",
     "images_per_class       = 800\n",
     "fixed_size             = tuple((500, 500))\n",
     "train_path             = \"dataset/train\"\n",
